--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <div class="page-header text-center title">
-    <h1>Barbara Palijan</h1>
+    <h1>Hugh Laurie</h1>
     <p><em><strong>- Tribute Page -</strong></em></p>
   </div>
 <div class="container">
